2005-12-27  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/mpegstream/gstdvddemux.c (AUDIO_CAPS) 
	(gst_dvd_demux_get_audio_stream): Use audio/x-lpcm as mimetype for
	LPCM.

	* gstmpegdemux.h: 
	* gstmpegdemux.c (gst_mpeg_demux_get_video_stream) 
	(gst_mpeg_demux_get_audio_stream): 
	* gst/mpegstream/gstdvddemux.c (gst_dvd_demux_get_video_stream) 
	(gst_dvd_demux_get_audio_stream) 
	(gst_dvd_demux_get_subpicture_stream) 
	(gst_dvd_demux_send_subbuffer):
	Send current* pad buffers with appropriate caps.

2005-12-26  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/iec958/ac3iec.h:
	* gst/iec958/ac3iec.c:
	(NORMAL_CAPS_DEF, RAW_AUDIO_CAPS_DEF, ac3iec_class_init)
	(ac3iec_init, ac3iec_set_property, ac3iec_get_property): Add a
	raw-audio property to ac3iec958 that allows setting the source pad
	caps to raw audio instead of audio/x-iec958. This makes it
	possible to use ac3iec958 together with the normal alsasink
	element to drive an external receiver that autodetects AC3
	content.

2005-12-23  Michael Smith  <msmith@fluendo.com>

	* gst/iec958/ac3iec.c: (ac3iec_init), (ac3iec_setcaps),
	(ac3iec_chain_dvd):
	* gst/iec958/ac3iec.h:
	  Accept audio/x-ac3 and audio/ac3 to ac3iec958 element.

2005-12-21  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_src_event):
	  When getting a seek event, first check if the upstream element
	  can handle it and only do our own seek stuff when it can't
	  (should fix #322856).

2005-12-21  Josef Zlomek  <josef dot zlomek at xeris dot cz>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mpeg2dec/gstmpeg2dec.c: (normal_seek):
	  Really convert to BYTES format when we want to convert
	  to bytes (use right variable; fixes #322856).

2005-12-19  Martin Soto  <martinsoto@users.sourceforge.net>

	Big mpegparse clean up, second round:

	* gst/mpegstream/gstdvddemux.c (gst_dvd_demux_handle_dvd_event):